added login page for application

--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,7 @@
 					<div class="navbar-collapse collapse">
 						<ul class="nav navbar-nav">
 							<li class="active"><a href="#">Home</a></li>
-							<li><a href="http://www.bootply.com" target="ext">About</a></li>
+							<li><a href="javascript:">About</a></li>
 							<li><a href="#contact">Contact</a></li>
 <!-- 							<li class="dropdown">
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown">
