--- a/app/index.html
+++ b/app/index.html
@@ -21,9 +21,9 @@
 					</div>
 					<div class="navbar-collapse collapse">
 						<ul class="nav navbar-nav">
-							<li class="active"><a href="#">Home</a></li>
-							<li><a href="javascript:">About</a></li>
-							<li><a href="#contact">Contact</a></li>
+							<li ng-class="{active: activetab == '/home'}"><a href="#home">Home</a></li>
+							<li ng-class="{active: activetab == '/about'}"><a href="#about">About</a></li>
+							<li ng-class="{active: activetab == '/contact'}"><a href="#contact">Contact</a></li>
 <!-- 							<li class="dropdown">
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown">
 									Dropdown <b class="caret"></b>
@@ -44,46 +44,7 @@
 		</div><!-- /navbar wrapper -->
 		<br>
 		<br>
-
-		<div class="carousel slide" id="myCarousel" ng-controller="CarouselSliderCtrl">
-			<carousel interval="2000">
-				<slide ng-repeat="slide in slides" active="slide.active">
-					<img ng-src="{{slide.image}}" class="img-responsive" style="margin:auto;">
-					<div class="carousel-caption" style="left: 50%;top: 20%;">
-						<p>{{slide.text}}</p>					
-					</div>
-				</slide>
-			</carousel>
-		</div>
-
-		<div class="container marketing">
-			<!-- Three columns of text below the carousel -->
-			<div class="row">
-				<div class="col-md-4 text-center">
-					<img class="img-circle" src="http://placehold.it/140x140">
-					<h2>Mobile-first</h2>
-					<p>Tablets, phones, laptops. The new 3 promises to be mobile friendly from the start.</p>
-					<p><a class="btn btn-default" href="#">View details »</a></p>
-				</div>
-				<div class="col-md-4 text-center">
-					<img class="img-circle" src="http://placehold.it/140x140">
-					<h2>One Fluid Grid</h2>
-					<p>There is now just one percentage-based grid for Bootstrap 3. Customize for fixed widths.</p>
-					<p><a class="btn btn-default" href="#">View details »</a></p>
-				</div>
-				<div class="col-md-4 text-center">
-					<img class="img-circle" src="http://placehold.it/140x140">
-					<h2>LESS is More</h2>
-					<p>Improved support for mixins make the new Bootstrap 3 easier to customize.</p>
-					<p><a class="btn btn-default" href="#">View details »</a></p>
-				</div>
-			</div><!-- /.row -->
-			<!-- FOOTER -->
-			<footer>
-				<p class="pull-right"><a href="#">Back to top</a></p>
-				<p>This Bootstrap layout is compliments of Bootply. ·</p>
-			</footer>
-		</div><!-- /.container -->
+		<div ng-view></div>
 
 		<script src="lib/angular/angular.js"></script>
 		<script src="lib/angular/angular-route.js"></script>
