adding contact us page.

--- a/app/contact.html
+++ b/app/contact.html
@@ -1,1 +1,44 @@
-skajfsdklfsndfms,fnsfmdfndsmf,smfns,fm
+<div class="row" style="margin-top:30px;">
+	<div class="col-sm-9 col-sm-offset-2">
+		<div class="row form-group">
+			<div class="col-md-12">
+				<h1>Contact Us</h1>
+			</div>
+			<div class="col-xs-4">
+				<input type="text" class="form-control" id="firstName" name="name" placeholder="Your Name">
+			</div>
+			<div class="col-xs-6">
+				<input type="text" class="form-control" id="organization" name="organization" placeholder="Company or Organization">
+			</div>
+		</div>
+		<div class="row form-group">
+			<div class="col-xs-5">
+				<input type="text" class="form-control" name="email" placeholder="Email">
+			</div>
+			<div class="col-xs-5">
+				<input type="text" class="form-control" name="phone" placeholder="Phone">
+			</div>
+		</div>
+		<div class="row form-group">
+			<div class="col-xs-10">
+				<textarea class="form-control" placeholder="Comments"></textarea>
+			</div>
+		</div>
+		<div class="row form-group">
+			<div class="col-xs-10">
+				<button class="btn btn-primary btn-lg pull-right">Contact Us</button>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="row">
+	<div class="col-sm-8 col-sm-offset-2 text-center">
+		<ul class="list-inline center-block">
+			<li><a href="javascript:"><img src="img/soc_fb.png"></a></li>
+			<li><a href="javascript:"><img src="img/soc_tw.png"></a></li>
+			<li><a href="javascript:"><img src="img/soc_gplus.png"></a></li>
+			<li><a href="javascript:"><img src="img/soc_pin.png"></a></li>
+		</ul>
+	</div>
+</div>
